Finished designing 3 sections - Header, About  and Features

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-<!--    <link rel="stylesheet" href="css/icon-font.css">-->
+        <link rel="stylesheet" href="assets/css/font-icon.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
@@ -14,7 +14,91 @@
 
 <body>
 
+    <header class="header">
+        <div class="header__logo">
+            <img src="./assets/images/logo-white.png" alt="Natours logo" class="header__logo__img">
+        </div>
 
+        <div class="header__text-content">
+            <h1 class="heading-primary heading-primary--b-margin">
+                <span class="heading-primary--title">Outdoors</span>
+                <span class="heading-primary--subtitle">is where life happens</span>
+            </h1>
+
+            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        </div>
+    </header>
+
+    <main>
+        <section class="section-about">
+
+            <div class="u-center-text u-m-bottom-v-large">
+                <h2 class="heading-secondary">
+                    Exciting tours for adventurous people
+                </h2>
+            </div>
+
+            <div class="wrapper wrapper--b-margin">
+                <div class="row">
+                    <div class="row__6">
+                        <h3 class="heading-tertiary u-m-bottom-small">You're going to fall in love with nature.</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quos voluptatum, necessitatibus perferendis voluptatem, iusto hic possimus illovel illum ipsum at delectus perspiciatis
+                        </p>
+
+                        <h3 class="heading-tertiary u-m-bottom-small">Live adventures like you never have before.</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quas dignib ssimos consequatur temporibus fuga quibusdam, corporis
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="row__6">
+                        <div class="gallery">
+                            <img src="./assets/images/nat-1-large.jpg" alt="Photo 1" class="gallery__photo gallery__photo--p1">
+                            <img src="./assets/images/nat-2-large.jpg" alt="Photo 2" class="gallery__photo gallery__photo--p2">
+                            <img src="./assets/images/nat-3-large.jpg" alt="Photo 3" class="gallery__photo gallery__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-features">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="row__3">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Explore the world</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum cum nulla sapiente corrupti</p>
+                        </div>
+                    </div>
+                    <div class="row__3">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Meet Nature</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vitae perspiciatis</p>
+                        </div>
+                    </div>
+                    <div class="row__3">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Find your way</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quasi assumenda dolores sequi culpa illo consequatur</p>
+                        </div>
+                    </div>
+                    <div class="row__3">
+                        <div class="feature-box ">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Live a healthier life</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, dicta, vitae. Laudantium tempora id nulla</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
