--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/font-icon.css">
+    <link rel="stylesheet" href="assets/css/font-icon.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
@@ -65,7 +65,7 @@
         </section>
 
         <section class="section-features">
-            <div class="wrapper">
+            <div class="wrapper ">
                 <div class="row">
                     <div class="row__3">
                         <div class="feature-box">
@@ -96,6 +96,165 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="section-tours">
+            <div class="u-center-text u-m-bottom-v-large">
+                <h2 class="heading-secondary">
+                    Most popular tours
+                </h2>
+            </div>
+
+            <div class="wrapper wrapper--b-margin">
+                <div class="row">
+                    <div class="row__4">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">The sea explorer</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tour</li>
+                                        <li>Up to 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: easy</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--1">
+                                <div class="card__cta">
+                                    <div class="card__price">
+                                        <p class="card__price--only">Only</p>
+                                        <p class="card__price--value">$297</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row__4">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">The forest hiker</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>7 day tour</li>
+                                        <li>Up to 40 people</li>
+                                        <li>6 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: medium</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--2">
+                                <div class="card__cta">
+                                    <div class="card__price">
+                                        <p class="card__price--only">Only</p>
+                                        <p class="card__price--value">$497</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row__4">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">The snow adventurer</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>5 day tour</li>
+                                        <li>Up to 15 people</li>
+                                        <li>3 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: hard</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--3">
+                                <div class="card__cta">
+                                    <div class="card__price">
+                                        <p class="card__price--only">Only</p>
+                                        <p class="card__price--value">$897</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-m-top-huge">
+                    <a href="#" class="btn btn--green">Discover all tours</a>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="section-stories">
+
+           <div class="bg-video">
+               <video class="bg-video__content" autoplay muted loop>
+                   <source src="assets/images/video.mp4" type="video/mp4">
+                   <source src="assets/images/video.webm" type="video/webm">
+                   Your browser is not supported!
+               </video>
+           </div>
+
+            <div class="u-center-text u-m-bottom-v-large">
+                <h2 class="heading-secondary">We make people genuinely happy</h2>
+            </div>
+
+            <div class="wrapper wrapper--b-margin">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__image" src="./assets/images/nat-8.jpg" alt="Person on a tour">
+                        <figcaption class="story__caption">Mary Smith</figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-m-bottom-small">I had the best week ever with my family.</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper wrapper--b-margin">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__image" src="./assets/images/nat-9.jpg" alt="Person on a tour">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-m-bottom-small">WOW! My life is completely different now.</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-m-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
