--- a/app/index.html
+++ b/app/index.html
@@ -214,13 +214,13 @@
 
         <section class="section-stories">
 
-           <div class="bg-video">
-               <video class="bg-video__content" autoplay muted loop>
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
                    <source src="assets/images/video.mp4" type="video/mp4">
                    <source src="assets/images/video.webm" type="video/webm">
                    Your browser is not supported!
                </video>
-           </div>
+            </div>
 
             <div class="u-center-text u-m-bottom-v-large">
                 <h2 class="heading-secondary">We make people genuinely happy</h2>
@@ -257,7 +257,84 @@
                 <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
+
+        <section class="section-book">
+            <div class="wrapper">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+
+                            <div class="u-m-bottom-medium">
+                                <h3 class="heading-secondary">
+                                    Start booking now
+                                </h3>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" id="fullName" class="form__input" placeholder="Full Name" required>
+                                <label for="fullName" class="form__label">Full name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" id="email" class="form__input" placeholder="Email address" required>
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+
+                            <div class="form__group u-m-bottom-medium">
+                                <div class="form__radio-group">
+                                    <input id="small" name="group-size" type="radio" class="form__radio-input"></input>
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group
+                                    </label>
+
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <input id="large" name="group-size" type="radio" class="form__radio-input"></input>
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour group
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="form__group">
+                                <button class="btn btn--green">Next step &rarr;</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__logo-box">
+                <img src="assets/images/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+
+            <div class="row">
+                <div class="row__6">
+                    <div class="footer__nav">
+                        <ul class="footer__list">
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row__6">
+                    <p class="footer__copyright">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim vel sed, laboriosam autem nisi quam consequuntur voluptate! Error repellat dolorem voluptate. Nesciunt eligendi, totam error voluptate odio eum, rerum. voluptate. Nesciunt eligendi, totam error voluptate odio eum, rerum. laboriosam autem nisi quam consequuntur voluptate! Error repellat dolorem voluptate
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
