Designed the navigation

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,24 @@
 
 <body>
 
+   <div class="navigation">
+       <input type="checkbox" id="nav-toggle" class="navigation__checkbox">
+
+       <label for="nav-toggle" class="navigation__button"><span class="navigation__icon"></span></label>
+
+       <div class="navigation__background">&nbsp;</div>
+
+       <nav class="navigation__nav">
+           <ul class="navigation__list">
+               <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+           </ul>
+       </nav>
+   </div>
+
     <header class="header">
         <div class="header__logo">
             <img src="./assets/images/logo-white.png" alt="Natours logo" class="header__logo__img">
@@ -335,6 +353,8 @@
             </div>
         </div>
     </footer>
+
+
 
 </body>
 
