Made the site responsive

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
                 </h2>
             </div>
 
-            <div class="wrapper wrapper--b-margin">
+            <div class="wrapper">
                 <div class="row">
                     <div class="row__6">
                         <h3 class="heading-tertiary u-m-bottom-small">You're going to fall in love with nature.</h3>
@@ -253,7 +253,7 @@
 
                     <div class="story__text">
                         <h3 class="heading-tertiary u-m-bottom-small">I had the best week ever with my family.</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero.</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt.</p>
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
 
                     <div class="story__text">
                         <h3 class="heading-tertiary u-m-bottom-small">WOW! My life is completely different now.</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero.</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laudantium earum! Tenetur vero ex iure, ipsam nam placeat porro eum, illo necessitatibus tempora sunt. Eligendi nemo eaque ullam nostrum libero. illo necessitatibus tempora sunt.</p>
                     </div>
                 </div>
             </div>
@@ -357,10 +357,10 @@
     <div class="popup" id="popup">
         <div class="popup__content">
             <div class="row no-gutters">
-                <div class="row__4">
+                <div class="row__4 u-no-b-margin">
                     <div class="popup__images">
-                        <img src="./assets/images/nat-8.jpg" alt="Person on a tour">
-                        <img src="./assets/images/nat-9.jpg" alt="Person on a tour">
+                        <span class="popup__images--img-1"></span>
+                        <span class="popup__images--img-2"></span>
                     </div>
                 </div>
                 <div class="row__8">
@@ -373,10 +373,10 @@
                         </div>
                         <h3 class="heading-tertiary u-m-bottom-small">Important &ndash; Please read these terms before booking!</h3>
                         <div class="row">
-                            <div class="row__6">
+                            <div class="row__6 u-no-b-margin">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nostrum, fuga fugit dignissimos iusto sed perspiciatis ratione dolorem vitae molestias! Aspernatur in fuga alias, consequatur odit sunt reiciendis officia animi.</p>
                             </div>
-                            <div class="row__6">
+                            <div class="row__6 u-no-b-margin">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum itaque animi blanditiis natus cupiditate odit molestiae et hic! Cumque facilis reiciendis deserunt, fugiat fuga, et animi commodi dolore eaque architecto.</p>
                             </div>
                         </div>
